[package]
name = "stdless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "stdless"
path = "main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# This could work for solving missing libc dependencies that LLVM wants, BUT
# as a learning experience, we'll be implementing them ourselves in this repo.
#[dependencies.compiler_builtins]
#version = "*"
#features = ["mem"]